@@ -1,7 +1,7 @@
 {
-  "fetched_at": "2026-01-06T00:14:02.733277+08:00",
-  "date": "2026-01-06",
-  "time": "00:14:02",
+  "fetched_at": "2026-01-07T13:21:02.118141+08:00",
+  "date": "2026-01-07",
+  "time": "13:21:02",
   "id": "UCPrdw58ZZXJyKYXdcCGViWw",
   "title": "Jaytrixia - Videos",
   "channel_url": "https://www.youtube.com/@Jaymantrix",
