@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="resources/css/games-section.css" />
     <link rel="stylesheet" href="resources/css/notes-section.css" />
     <link rel="stylesheet" href="resources/css/chat-section.css" />
-    <script src="resources/js/script.js" defer></script>
-    <script src="resources/js/Observer.js" defer></script>
-    <!-- Vercel Web Analytics -->
+    <script defer src="resources/js/script.js"></script>
+    <script defer src="resources/js/Observer.js"></script>
     <script>
       window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
