@@ -65,3 +65,6 @@ January 05, 2026
 January 06, 2026
 > Added smooth movement of category tabs into top when scroll down
 > Added marquee effect on the button "Chat with Jaymantrix AI"
+
+January 07, 2026
+> Added Vercel Web Analytics
